Split jni function to osgi jar file independence